@@ -2031,6 +2031,113 @@ Same as gtk_text_iter_forward_search(), but moves backward.
   <return></return>
 </function>
 
+
+<function name="gtk_image_set_from_pixmap">
+<description>
+See the Image::Image(const Glib::RefPtr&lt;Gdk::Pixmap&gt;&amp; pixmap, const Glib::RefPtr&lt;Gdk::Bitmap&gt;&amp; mask) constructor for details.
+</description>
+<parameters>
+<parameter name="image">
+<parameter_description> a #GtkImage
+</parameter_description>
+</parameter>
+<parameter name="pixmap">
+<parameter_description> a #Gdk::Pixmap
+</parameter_description>
+</parameter>
+<parameter name="mask">
+<parameter_description> a #Gdk::Bitmap
+</parameter_description>
+</parameter>
+</parameters>
+<return></return>
+</function>
+
+<function name="gtk_image_set_from_pixbuf">
+<description>
+See the Image::Image(const Glib::RefPtr&lt;Gdk::Pixbuf&gt;&amp; pixbuf) constructor for details.
+</description>
+<parameters>
+<parameter name="image">
+<parameter_description> a #GtkImage
+</parameter_description>
+</parameter>
+<parameter name="pixbuf">
+<parameter_description> a #Gdk::Pixbuf
+</parameter_description>
+</parameter>
+</parameters>
+<return></return>
+</function>
+
+<function name="gtk_image_set_from_image">
+<description>
+See the Image::Image(const Glib::RefPtr&lt;Gdk::Image&gt;&amp; image, const Glib::RefPtr&lt;Gdk::Bitmap&gt;&amp; mask) constructor for details.
+</description>
+<parameters>
+<parameter name="image">
+<parameter_description> a #GtkImage
+</parameter_description>
+</parameter>
+<parameter name="gdk_image">
+<parameter_description> a #Gdk::Image
+</parameter_description>
+</parameter>
+<parameter name="mask">
+<parameter_description> a #Gdk::Bitmap
+</parameter_description>
+</parameter>
+</parameters>
+<return></return>
+</function>
+
+<function name="gtk_image_set_from_file">
+<description>
+See the Image::Image(const std::string&amp; file) constructor for details.
+</description>
+<parameters>
+<parameter name="image">
+<parameter_description> a #GtkImage
+</parameter_description>
+</parameter>
+<parameter name="filename">
+<parameter_description> a filename.
+</parameter_description>
+</parameter>
+</parameters>
+<return></return>
+</function>
+
+<!-- Don't just refer to a constructor for this one, 
+     because there is no such constructor,
+     to avoid ambiguity with the filename constructor.
+-->
+<function name="gtk_image_set_from_icon_name">
+<description>
+Causes the Image to display an icon from the current icon theme.
+If the icon name isn&apos;t known, a &quot;broken image&quot; icon will be
+displayed instead.  If the current icon theme is changed, the icon
+will be updated appropriately.
+
+Since: 2.6
+</description>
+<parameters>
+<parameter name="image">
+<parameter_description> a #GtkImage
+</parameter_description>
+</parameter>
+<parameter name="icon_name">
+<parameter_description> an icon name
+</parameter_description>
+</parameter>
+<parameter name="size">
+<parameter_description> a stock icon size
+</parameter_description>
+</parameter>
+</parameters>
+<return></return>
+</function>
+
 <function name="gtk_icon_factory_add_default">
   <description>
     Adds an icon factory to the list of icon factories searched by
