@@ -60,10 +60,45 @@ class Image : public Misc
 public:
 
   _CTOR_DEFAULT
+
+  //TODO: The C documentation says that the constructor parameters can be NULL. Choose sensible method overloads.
+
+  /** Creates an Image widget displaying @a pixmap with a @a mask.
+   * A Gdk::Pixmap is a server-side image buffer in the pixel format of the current display. 
+   *
+   * @param pixmap A Gdk::Pixmap
+   * @param mask A Gdk::Bitmap
+   */
   _WRAP_CTOR(Image(const Glib::RefPtr<Gdk::Pixmap>& pixmap, const Glib::RefPtr<Gdk::Bitmap>& mask), gtk_image_new_from_pixmap)
+
+  /** Creates an Image widget displaying an @a image with a mask.
+   * A Gdk::Image is a client-side image buffer in the pixel format of the current display.
+   */
   _WRAP_CTOR(Image(const Glib::RefPtr<Gdk::Image>& image, const Glib::RefPtr<Gdk::Bitmap>& mask), gtk_image_new_from_image)
+
+  /** Creates an Image widget displaying the file @a filename.
+   * If the file isn't found or can't be loaded, the resulting Gtk::Image will display a "broken image" icon. 
+   *
+   * If the file contains an animation, the image will contain an animation.
+   *
+   * If you need to detect failures to load the file, use Gdk::Pixbuf::create_from_file() to load the file yourself, 
+   * then create the GtkImage from the pixbuf. (Or for animations, use Gdk::PixbufAnimation::create_from_file()).
+   *
+   * The storage type (get_storage_type()) of the returned image is not defined. It will be whatever is appropriate for displaying the file.
+   */
   _WRAP_CTOR(Image(const std::string& file), gtk_image_new_from_file)
+
+  //TODO: Change this documentation when we have wrapped new_from_icon_set().
+  /** Creates a new Image widget displaying @a pixbuf.
+   * Note that this just creates an GtkImage from the pixbuf. The Gtk::Image created will not react to state changes. 
+   * Should you want that, you should use new_from_icon_set().
+   */
   _WRAP_CTOR(Image(const Glib::RefPtr<Gdk::Pixbuf>& pixbuf), gtk_image_new_from_pixbuf)
+  //TODO: Wrap gtk_image_new_from_icon_set()
+
+  //We don't wrap gtk_image_new_from_icon_name() to avoid a clash with the from-filename constructor.
+  //But we do wrap gtk_image_set_from_icon_name()
+  _IGNORE(gtk_image_new_from_icon_name)
 
   /** Creates am Image displaying a stock icon.
    * Sample stock icon identifiers are Gtk::Stock::OPEN, Gtk::Stock::EXIT. Sample stock sizes are Gtk::ICON_SIZE_MENU, Gtk::ICON_SIZE_SMALL_TOOLBAR.
@@ -84,6 +119,8 @@ public:
   _WRAP_METHOD(void set(const Gtk::StockID& stock_id, IconSize size), gtk_image_set_from_stock)
   _WRAP_METHOD(void set(IconSet& icon_set, IconSize size), gtk_image_set_from_icon_set)
   _WRAP_METHOD(void set(const Glib::RefPtr<Gdk::PixbufAnimation>& animation), gtk_image_set_from_animation)
+
+
   _WRAP_METHOD(void set_from_icon_name(const Glib::ustring& icon_name, IconSize size), gtk_image_set_from_icon_name)
 
   _WRAP_METHOD(void clear(), gtk_image_clear)
