@@ -1,3 +1,10 @@
+2008-05-14  Murray Cumming  <murrayc@murrayc.com>
+
+	* gtk/src/gtk_docs_override.xml: Add custom documentation for the 
+	gtk_image_set_from_*() functions, because they refer to new_from_*
+ 	functions instead of our constructors.
+	* gtk/src/image.hg: Add documentation for the constructors.
+
 2008-05-14  Gennaro Bellizio  <genbell@tiscali.it>
 
 	* gtk/src/entry.hg: Added the shadow_type property that was added to 
